--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "leancloud-storage": "^3.0.0",
     "leanengine": "^3.0.0",
     "request": "^2.72.0"
   },
@@ -58,7 +59,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "vuex": "^3.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
